--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <title>School App</title>
+    <link rel="stylesheet" href="/static/css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
