--- a/templates/events.html
+++ b/templates/events.html
@@ -61,10 +61,7 @@
 <hr>
 
 <!-- Form: Add Events Per Assignment -->
-<h2>Add Events Per Assignment</h2>
-<form method="POST" action="/add_events_per_assignment/">
-
-</form>
+<form method="POST" action="/add_events_per_assignment/"></form>
 
 <!-- Include js file -->
 <script src="/static/js/events.js"></script>
