Delete selectd events implemented. Create an event for a single student implemented.

--- a/templates/events.html
+++ b/templates/events.html
@@ -54,6 +54,7 @@
 <div>
     <button id="export_pdf_btn" type="submit" class="btn btn-primary">Export selected to pdf</button>
     <button id="exportCsvBtn" type="submit" class="btn btn-primary">Export all to csv</button>
+    <button id="delSelectedBtn" type="submit" class="btn btn-primary">Delete Selected</button>
     <!-- Buttons to Select/Unselect All -->
     <button id="selectAllBtn" type="submit" class="btn btn-primary">Select All</button>
     <button id="unselectAllBtn"type="submit" class="btn btn-primary">Unselect All</button>
